--- a/deployment/docker/web-ui/Dockerfile
+++ b/deployment/docker/web-ui/Dockerfile
@@ -41,11 +41,11 @@ RUN --mount=type=cache,target=/cache --mount=type=cache,target=/root/.cache/pip 
 
 
 
-RUN --mount=type=cache,target=/root/.cache/pip \
-  git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git stable-diffusion-webui-temp && \
-  cd stable-diffusion-webui-temp && \
-  git reset --hard 20ae71faa8ef035c31aa3a410b707d792c8203a3 && \
-  pip install -r requirements_versions.txt
+#RUN --mount=type=cache,target=/root/.cache/pip \
+#  git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui.git stable-diffusion-webui-temp && \
+#  cd stable-diffusion-webui-temp && \
+#  git reset --hard 20ae71faa8ef035c31aa3a410b707d792c8203a3 && \
+#  pip install -r requirements_versions.txt
 
 ARG SHA=68f336bd994bed5442ad95bad6b6ad5564a5409a
 RUN --mount=type=cache,target=/root/.cache/pip \
