[4] copy torch whl

--- a/deployment/docker/web-ui/Dockerfile
+++ b/deployment/docker/web-ui/Dockerfile
@@ -34,10 +34,14 @@ RUN --mount=type=cache,target=/var/cache/apt \
   ffmpeg libglfw3-dev libgles2-mesa-dev pkg-config libcairo2 libcairo2-dev build-essential
 
 
-RUN --mount=type=cache,target=/cache --mount=type=cache,target=/root/.cache/pip \
-  aria2c -x 5 --dir /cache --out torch-2.0.1-cp310-cp310-linux_x86_64.whl -c \
-  https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl && \
-  pip install /cache/torch-2.0.1-cp310-cp310-linux_x86_64.whl torchvision --index-url https://download.pytorch.org/whl/cu118
+# RUN --mount=type=cache,target=/cache --mount=type=cache,target=/root/.cache/pip \
+#   aria2c -x 5 --dir /cache --out torch-2.0.1-cp310-cp310-linux_x86_64.whl -c \
+#   https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl && \
+#   pip install /cache/torch-2.0.1-cp310-cp310-linux_x86_64.whl torchvision --index-url https://download.pytorch.org/whl/cu118
+COPY deployment/docker/download/data/torch-2.0.1_cu118-cp310-cp310-linux_x86_64.whl /tmp/
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install /tmp/torch-2.0.1_cu118-cp310-cp310-linux_x86_64.whl \
+    torchvision --index-url https://download.pytorch.org/whl/cu118
 
 
 
